2002-06-07  Roland McGrath  <roland@frob.com>

	* store.h (struct store_enc): Use loff_t instead of off_t.
	(store_enc_init, store_enc_return, store_return): Likewise.

	* encode.c (store_std_leaf_encode): Do a sizeof comparison to get
	`too_big' optimized out when store_enc starts using 64 bit offsets.

2002-05-20  Ognyan Kulev <ogi@fmi.uni-sofia.bg>

	* Makefile: Move inclusion of ../Makeconf before using $(srcdir).

2002-05-16  Roland McGrath  <roland@frob.com>

	* device.c (enforced): Use dev_status_data_t for SIZES.
	(store_device_create): Likewise.
	(dev_write): Do some silly magic since device.defs uses int.

2002-05-07  Roland McGrath  <roland@frob.com>

	* module.c (open_class): Add cast to int for %* arg.

	* kids.c (store_open_children): Dereference pointer in isalnum call.

	* set.c (store_set_runs): Fix argument type.
	* kids.c (store_set_children): Likewise.

2002-03-15  Roland McGrath  <roland@frob.com>

	* Makefile (OBJS): Remove hack for part.o.
	(parted.o parted_p.o parted_pic.o): Targets removed.

2002-03-14  Roland McGrath  <roland@frob.com>

	* Makefile (cleantarg): Append $(store-types:%=libstore_%.a) here.
	(all): Depend on that list too.
	(install): Depend on those files in $(libdir).
	($(store-types:%=$(libdir)/libstore_%.a): $(libdir)/%: %): New static
	pattern rule to install them.

2002-03-13  Roland McGrath  <roland@frob.com>

	* Makefile ($(store-types:%=libstore_%.a)): Create object files with
	the undefined symbol rather than linker scripts.

2002-03-14  Marcus Brinkmann  <marcus@gnu.org>

	* unzipstore.c (unzip_store): New variable IN_BUF_SIZE to hold
	allocated space for IN_BUF.  Use that instead IN_BUF_LEN for that
	purpose if appropriate.  Always update IN_BUF_LEN after a read.

2002-03-11  Roland McGrath  <roland@frob.com>

	* unzipstore.c: New file, broken out of bunzip2.c.
	* bunzip2.c: Most code moved to unzipstore.c, which we #include.
	(DO_UNZIP, UNZIP): New function, macro.